--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,10 @@
+
+
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      qr
+
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +12,19 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">TP ADS</ion-title>
     </ion-toolbar>
   </ion-header>
+<ion-content padding>
+  
+<ion-button (click)="scanQR()" (click)="call('0660100622')">Scan Code</ion-button>
+<p>{{scannedResult}}</p> 
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
 </ion-content>
+</ion-content>
+
+
+
+
+
+
